Bug 407584 The auto appending accesskey is in wrong position when an ellipsis exists at non-tail of the caption. patch by Kazuyoshi Kato<kzys@8-p.info> r+sr=neil, a1.9=mtschrep